--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Assignment
 excludes=
+file.reference.commons-lang3-3.14.0.jar=C:\\Users\\wongy\\Downloads\\commons-lang3-3.14.0-bin\\commons-lang3-3.14.0\\commons-lang3-3.14.0.jar
+file.reference.fuzzywuzzy-1.3.0.jar=C:\\Users\\wongy\\Downloads\\fuzzywuzzy-1.3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-lang3-3.14.0.jar}:\
+    ${file.reference.fuzzywuzzy-1.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
