--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Assignment
+application.vendor=wongy
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,11 @@ dist.jar=${dist.dir}/Assignment.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Assignment
+endorsed.classpath=
 excludes=
-file.reference.commons-lang3-3.14.0.jar=C:\\Users\\wongy\\Downloads\\commons-lang3-3.14.0-bin\\commons-lang3-3.14.0\\commons-lang3-3.14.0.jar
-file.reference.fuzzywuzzy-1.3.0.jar=C:\\Users\\wongy\\Downloads\\fuzzywuzzy-1.3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.commons-lang3-3.14.0.jar}:\
-    ${file.reference.fuzzywuzzy-1.3.0.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
